# modules-library

./: .gitignore  ModuleGroup.java  README.md  build.gradle  settings.gradle  Примерная иерархия модулей.drawio
.github/workflows/: gradle.yml
JNI-Library/: CMakeLists.txt  OneWire.cpp  OneWire.h  OneWireUtils.c  OneWireUtils.h  ru_funnydwarf_iot_nml_JNILibrary.c  ru_funnydwarf_iot_nml_JNILibrary.h  ru_funnydwarf_iot_nml_Pin.c  ru_funnydwarf_iot_nml_Pin.h  ru_funnydwarf_iot_nml_PinDigitalReader.c  ru_funnydwarf_iot_nml_PinDigitalReader.h  ru_funnydwarf_iot_nml_PinDigitalWriter.c  ru_funnydwarf_iot_nml_PinDigitalWriter.h  ru_funnydwarf_iot_nml_modules_OutputModule.c  ru_funnydwarf_iot_nml_modules_OutputModule.h  ru_funnydwarf_iot_nml_modules_onewire_DS18B20OneWireUnit.c  ru_funnydwarf_iot_nml_modules_onewire_DS18B20OneWireUnit.h  ru_funnydwarf_iot_nml_modules_onewire_OneWire.c  ru_funnydwarf_iot_nml_modules_onewire_OneWire.h  ru_funnydwarf_iot_nml_modules_receiver_writer_NativeWriter.c  ru_funnydwarf_iot_nml_modules_receiver_writer_NativeWriter.h  ru_funnydwarf_iot_nml_modules_sensor_reader_NativeReader.c  ru_funnydwarf_iot_nml_modules_sensor_reader_NativeReader.h  test.c
LibraryTester/: build.gradle  modules.json  modules.xml
LibraryTester/src/main/java/ru/funnydwarf/iot/nml/: Main.java  TestJSON.java
src/main/java/ru/funnydwarf/iot/ml/: InitializationState.java  Initializer.java  Module.java  ModuleDescription.java  ModuleDescriptionRepository.java  ModuleGroup.java  ModuleListReadable.java  Utils.java
src/main/java/ru/funnydwarf/iot/ml/receiver/: Receiver.java
src/main/java/ru/funnydwarf/iot/ml/receiver/writer/: NativeWriter.java  Writer.java
src/main/java/ru/funnydwarf/iot/ml/register/: Readable.java  Register.java  Writeable.java
src/main/java/ru/funnydwarf/iot/ml/sensor/: CurrentMeasurementSession.java  Measurement.java  MeasurementData.java  MeasurementDataRepository.java  MeasurementDescription.java  MeasurementDescriptionRepository.java  MeasurementRepository.java  MeasurementSession.java  MeasurementSessionRepository.java  Sensor.java
src/main/java/ru/funnydwarf/iot/ml/sensor/dataio/: DataInput.java  DataOutput.java  FileDataInput.java  FileDataOutput.java  FileMeasurementDataList.java
src/main/java/ru/funnydwarf/iot/ml/sensor/datawriter/: DataIO.java  FileDataIO.java
src/main/java/ru/funnydwarf/iot/ml/task/: Task.java  TaskCommand.java  TaskTriggerType.java
src/main/java/ru/funnydwarf/iot/nml/: DigitalValue.java  Initializable.java  JNILibrary.java  Pin.java  PinDigitalReader.java  PinDigitalWriter.java  PinMode.java  PinType.java  Testy.java  WrongPinModeException.java
src/main/java/ru/funnydwarf/iot/nml/modules/: Module.java  ModuleContainer.java  OutputModule.java
src/test/java/ru/funnydwarf/iot/ml/: ModuleGroupTest.java
src/test/java/ru/funnydwarf/iot/ml/task/: TaskTest.java
(+26 files in other folders)
